--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-# Demonstration page for the paper "Blow: many-block hyper-conditioned flows for non-parallel audio conversion"
+# Demonstration page for the paper Blow: many-block hyper-conditioned flows for non-parallel audio conversion
 
 This is the...
